# Arknights-talk-with-api-in

./: .gitignore  README.md  index.html
ai-core/: Cargo.toml
ai-serve/: .clusai.toml  Cargo.toml
ai-serve/src/: http.rs  main.rs  protocol.rs  stdio.rs
css/: style.css
js/: characters.js  chat.js  codeHighlight.js  customCharacters.js  kernel.js  live2d.js  main.js  music.js  musicData.js  ocr.js  storage.js  tilt.js  tts.js
prompts/: SKILL_泥岩.md  SKILL_澄闪.md  SKILL_羽毛笔.md  SKILL_艾雅法拉.md  SKILL阿米娅.md
workers/: tts-proxy.js  wrangler.toml
workers/cloudbase-tts-fn/: cloudbaserc.json  package.json  scf_bootstrap  server.js
workers/cloudbase-tts-proxy/: package.json  server.js
